manifests/test/headlamp/apps_v1_deployment_headlamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: headlamp
      app.kubernetes.io/name: headlamp
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: headlamp
        app.kubernetes.io/name: headlamp
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - -in-cluster
        - -in-cluster-context-name=main
        - -plugins-dir=/headlamp/plugins
        - -session-ttl=86400
        - -oidc-client-id=$(OIDC_CLIENT_ID)
        - -oidc-idp-issuer-url=$(OIDC_ISSUER_URL)
        - -oidc-scopes=$(OIDC_SCOPES)
        - -oidc-callback-url=$(OIDC_CALLBACK_URL)
        - -oidc-use-pkce=true
        - -oidc-skip-tls-verify
        env:
        - name: OIDC_ISSUER_URL
          value: https://auth.10.5.0.54.nip.io/realms/home
        - name: OIDC_CLIENT_ID
          value: kubernetes
        - name: OIDC_SCOPES
          value: email,profile
        - name: OIDC_CALLBACK_URL
          value: https://headlamp.10.5.0.55.nip.io/oidc-callback
        image: ghcr.io/headlamp-k8s/headlamp:v0.44.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: headlamp
        ports:
        - containerPort: 4466
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 100
        volumeMounts:
        - mountPath: /headlamp/plugins
          name: plugins-dir
      hostUsers: true
      initContainers:
      - command:
        - /bin/sh
        - -c
        - cp -r /plugins/* /headlamp/plugins/
        image: ghcr.io/headlamp-k8s/headlamp-plugin-cert-manager:v0.1.0@sha256:d7d0321a90c0347e2e4f9f7e362ecaa10a36592cc5ac8fd1514df11c476b43fe
        name: install-cert-manager-plugin
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 101
          runAsUser: 100
        volumeMounts:
        - mountPath: /headlamp/plugins
          name: plugins-dir
      - command:
        - /bin/sh
        - -c
        - cp -r /plugins/* /headlamp/plugins/
        image: ghcr.io/naval-group/headlamp-kubevirt:main@sha256:0854b1479cdced9d09ddf5f75335de91573d7de346d05115ff883bc3839c4bf8
        name: install-kubevirt-plugin
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 101
          runAsUser: 100
        volumeMounts:
        - mountPath: /headlamp/plugins
          name: plugins-dir
      - command:
        - /bin/sh
        - -c
        - cp -r /plugins/* /headlamp/plugins/
        image: ghcr.io/magohl/external-secrets-operator-headlamp-plugin:0.1.0-beta7@sha256:7a48e51b90337ff3b5bf74e326047fc5886257b316be7c5a17e707dcce4cbd64
        name: install-external-secrets-operator-plugin
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 101
          runAsUser: 100
        volumeMounts:
        - mountPath: /headlamp/plugins
          name: plugins-dir
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: headlamp
      volumes:
      - emptyDir: {}
        name: plugins-dir
