manifests/test/headlamp/gateway.networking.k8s.io_v1_gateway_headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: headlamp
  namespace: headlamp
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.55
  listeners:
  - hostname: headlamp.10.5.0.55.nip.io
    name: headlamp
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: headlamp-gateway-tls
      mode: Terminate
