manifests/test/headlamp/gateway.networking.k8s.io_v1_httproute_headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  hostnames:
  - headlamp.10.5.0.55.nip.io
  parentRefs:
  - name: headlamp
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
    matches:
    - path:
        value: /
